Update with all working components

--- a/serenity.properties
+++ b/serenity.properties
@@ -21,6 +21,7 @@ serenity.requirement.types=feature, story
 serenity.browser.height = 1150
 serenity.browser.width = 1060
 
+# Update this portion to the Head Master in GitHUb
 # How long does Serenity wait for elements that are not present on the screen to load
 #webdriver.timeouts.implicitlywait = 5000
 ######################################################
