--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>autoMap</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
+    <!-- Update the Master Head with this new portion -->
     <name>Amazon Login Automation</name>
 
     <properties>
