--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <!-- Update the Master Head with this new portion -->
     <name>Amazon Login Automation</name>
 
+    <!-- Add this command to the configuration file -->
+    <!-- clean verify serenity:aggregate -Dmaven.test.failure.ignore=true -->
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <serenity.version>1.2.2</serenity.version>
