--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,11 @@
 
     <!-- Add this command to the configuration file -->
     <!-- clean verify serenity:aggregate -Dmaven.test.failure.ignore=true -->
-    
+    <!-- serenity.version = 1.1.381 -->
+    <!-- cucumber.version = 1.1.9 -->
+    <!-- serenity.browser.height = 1150 -->
+    <!-- serenity.browser.width = 1060 -->
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <serenity.version>1.2.2</serenity.version>
