--- a/serenity.properties
+++ b/serenity.properties
@@ -16,6 +16,8 @@ serenity.requirement.types=feature, story
 
 # Run the tests without calling webdriver - useful to check your Cucumber wireing
 #serenity.dry.run=true
+\
+serenity.verbose.steps=true
 
 # Customize browser size
 serenity.browser.height = 1150
