Update the lastest files for demo

--- a/serenity.properties
+++ b/serenity.properties
@@ -2,21 +2,37 @@
 #webdriver.driver=phantomjs
 
 # Appears at the top of the reports
-serenity.project.name = Demo Project using Serenity and Cucumber
+serenity.project.name = Amazon Login Demo Project
 
 # Root package for any JUnit acceptance tests
 # Below is the default root of junit
-#serenity.test.root=src.test.java
+serenity.test.root=src.test.java
 
 # John Modifies this junit root
-serenity.test.root=net.thucydides.showcase.cucumber.junit
+#serenity.test.root=net.thucydides.showcase.cucumber.junit
 
 # Customize your requirements hierarchy
-serenity.requirement.types=feature, story
+# theme = Module ID => Example: Admin
+# epic = High-level Requirement group => Example: UserManagement
+# feature: specific low-level test case(s) => Example: gherkin test file.  Create new User. remove user, edit user, etc...
+# Note: at the feature level, you can specify the Version and Sprint version
+# Example: The following is the setup of each Gherkin test file
+# @version:Release-1
+# @version:Sprint-1.1
+# Feature: Create a new user
+
+serenity.requirement.types = theme, epic, feature
+#serenity.requirement.types=feature, story
+
+# To show version and RC(iteration)?
+serenity.release.types = Version,Iteration
+
+# To show version and Sprint?
+#serenity.release.types = Version,Sprint
 
 # Run the tests without calling webdriver - useful to check your Cucumber wireing
 #serenity.dry.run=true
-\
+
 serenity.verbose.steps=true
 
 # Customize browser size
@@ -32,7 +48,7 @@ serenity.browser.width = 1060
 
 # Update this portion to the Head Master in GitHUb
 # How long does Serenity wait for elements that are not present on the screen to load
-#webdriver.timeouts.implicitlywait = 5000
+webdriver.timeouts.implicitlywait = 15000
 ######################################################
 ## All the Serenity options
 
@@ -115,10 +131,10 @@ serenity.browser.width = 1060
 #serenity.reports.show.step.details
 #Should Thucydides display detailed information in the test result tables. If this is set to true, test result tables will display a breakdown of the steps by result. This is false by default.
 #
-#serenity.report.show.manual.tests
+#serenity.report.show.manual.tests=false
 #Show statistics for manual tests in the test reports.
 #
-#serenity.report.show.releases
+#serenity.report.show.releases=true
 #Report on releases (defaults to true).
 #
 #serenity.restart.browser.frequency
@@ -151,7 +167,7 @@ serenity.browser.width = 1060
 #serenity.issue.tracker.url
 #The URL used to generate links to the issue tracking system.
 #
-#serenity.activate.firebugs
+serenity.activate.firebugs=true
 #Activate the Firebugs and FireFinder plugins for Firefox when running the WebDriver tests. This is useful for debugging, but is not recommended when running the tests on a build server.
 #
 #serenity.batch.strategy
@@ -269,7 +285,7 @@ serenity.browser.width = 1060
 #output.formats
 #What format should test results be generated in. By default, this is "json,xml".
 #
-#narrative.format
+narrative.format='asciidoc'
 #Set this property to 'asciidoc' to activate using Asciidoc format in narrative text.
 #
 #jira.url
