change the report structure

--- a/serenity.properties
+++ b/serenity.properties
@@ -21,7 +21,7 @@ serenity.test.root=src.test.java
 # @version:Sprint-1.1
 # Feature: Create a new user
 
-serenity.requirement.types = theme, epic, feature
+serenity.requirement.types = theme,feature, story
 #serenity.requirement.types=feature, story
 
 # To show version and RC(iteration)?
