--- a/serenity.properties
+++ b/serenity.properties
@@ -1,3 +1,9 @@
+
+##########################################
+##   configure the configuration file
+##  clean verify serenity:aggregate -Dmaven.test.failure.ignore=true
+###########################################
+
 # Define the default driver
 #webdriver.driver=phantomjs
 
@@ -12,23 +18,10 @@ serenity.test.root=src.test.java
 #serenity.test.root=net.thucydides.showcase.cucumber.junit
 
 # Customize your requirements hierarchy
-# theme = Module ID => Example: Admin
-# epic = High-level Requirement group => Example: UserManagement
-# feature: specific low-level test case(s) => Example: gherkin test file.  Create new User. remove user, edit user, etc...
-# Note: at the feature level, you can specify the Version and Sprint version
-# Example: The following is the setup of each Gherkin test file
-# @version:Release-1
-# @version:Sprint-1.1
-# Feature: Create a new user
-
-serenity.requirement.types = theme,feature, story
-#serenity.requirement.types=feature, story
+serenity.requirement.types = epic,feature, story
 
 # To show version and RC(iteration)?
 serenity.release.types = Version,Iteration
-
-# To show version and Sprint?
-#serenity.release.types = Version,Sprint
 
 # Run the tests without calling webdriver - useful to check your Cucumber wireing
 #serenity.dry.run=true
@@ -38,12 +31,6 @@ serenity.verbose.steps=true
 # Customize browser size
 serenity.browser.height = 1150
 serenity.browser.width = 1060
-
-##########################################
-##   configure the configuration file
-##  clean verify serenity:aggregate -Dmaven.test.failure.ignore=true
-###########################################
-
 
 
 # Update this portion to the Head Master in GitHUb
