--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <!-- Add this command to the configuration file -->
     <!-- clean verify serenity:aggregate -Dmaven.test.failure.ignore=true -->
-    <!-- serenity.version = 1.1.381 -->
-    <!-- cucumber.version = 1.1.9 -->
+    <!-- serenity.version = 1.1.38 ...1.2.2 -->
+    <!-- cucumber.version = 1.1.9 ...1.1.23 -->
     <!-- serenity.browser.height = 1150 -->
     <!-- serenity.browser.width = 1060 -->
 
@@ -95,7 +95,7 @@
                 <version>2.18.1</version>
                 <configuration>
                     <includes>
-                        <include>**/*TestSuite.java</include>
+                        <include>**/LoginRunnerTestSuite.java</include>
                     </includes>
                     <argLine>-Xmx512m</argLine>
                     <systemPropertyVariables>
