--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>1.2.2</serenity.version>
-        <serenity.cucumber.version>1.1.23</serenity.cucumber.version>
+        <serenity.version>1.1.38</serenity.version>
+        <serenity.cucumber.version>1.1.9</serenity.cucumber.version>
         <webdriver.driver>firefox</webdriver.driver>
     </properties>
 
@@ -95,7 +95,7 @@
                 <version>2.18.1</version>
                 <configuration>
                     <includes>
-                        <include>**/LoginRunnerTestSuite.java</include>
+                        <include>**/FutureLoginRunnerTestSuite.java</include>
                     </includes>
                     <argLine>-Xmx512m</argLine>
                     <systemPropertyVariables>
