--- a/pom.xml
+++ b/pom.xml
@@ -1,139 +1,142 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.autoMap</groupId>
-    <artifactId>autoMap</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <!-- Update the Master Head with this new portion -->
-    <name>Amazon Login Automation</name>
-
-    <!-- Add this command to the configuration file -->
-    <!-- clean verify serenity:aggregate -Dmaven.test.failure.ignore=true -->
-    <!-- serenity.version = 1.1.38 ...1.2.2 -->
-    <!-- cucumber.version = 1.1.9 ...1.1.23 -->
-    <!-- serenity.browser.height = 1150 -->
-    <!-- serenity.browser.width = 1060 -->
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>1.2.2</serenity.version>
-        <serenity.cucumber.version>1.1.23</serenity.cucumber.version>
-        <webdriver.driver>firefox</webdriver.driver>
-    </properties>
-
-    <repositories>
-      <repository>
-        <snapshots>
-        <enabled>false</enabled>
-        </snapshots>
-        <id>central</id>
-        <name>bintray</name>
-        <url>http://jcenter.bintray.com</url>
-      </repository>
-    </repositories>
-    <pluginRepositories>
-      <pluginRepository>
-        <snapshots>
-        <enabled>false</enabled>
-        </snapshots>
-        <id>central</id>
-        <name>bintray-plugins</name>
-        <url>http://jcenter.bintray.com</url>
-      </pluginRepository>
-    </pluginRepositories>
-
-    <dependencies>
-        <dependency>
-            <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-core</artifactId>
-            <version>${serenity.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-cucumber</artifactId>
-            <version>${serenity.cucumber.version}</version>
-            <scope>test</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.7</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>1.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.lambdaj</groupId>
-            <artifactId>lambdaj</artifactId>
-            <version>2.3.3</version>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
-                <configuration>
-                    <includes>
-                        <include>**/FutureLoginRunnerTestSuite.java</include>
-                    </includes>
-                    <argLine>-Xmx512m</argLine>
-                    <systemPropertyVariables>
-                        <webdriver.driver>${webdriver.driver}</webdriver.driver>
-                    </systemPropertyVariables>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>net.serenity-bdd.maven.plugins</groupId>
-                <artifactId>serenity-maven-plugin</artifactId>
-                <version>${serenity.version}</version>
-                <executions>
-                    <execution>
-                        <id>serenity-reports</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>aggregate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-</project>
+<?xml version="1.0" encoding="UTF-8"?> 
+ <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"> 
+     <modelVersion>4.0.0</modelVersion> 
+     <groupId>com.autoMap</groupId> 
+     <artifactId>autoMap</artifactId> 
+     <version>1.0-SNAPSHOT</version> 
+     <packaging>jar</packaging> 
+     <!-- Update the Master Head with this new portion --> 
+     <name>Amazon Login Automation</name> 
+ 
+ 
+     <!-- Add this command to the configuration file --> 
+     <!-- clean verify serenity:aggregate -Dmaven.test.failure.ignore=true --> 
+     <!-- serenity.version = 1.1.38 ...1.2.2 --> 
+     <!-- cucumber.version = 1.1.9 ...1.1.23 --> 
+     <!-- serenity.browser.height = 1150 --> 
+     <!-- serenity.browser.width = 1060 --> 
+ 
+ 
+     <properties> 
+         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
+         <serenity.version>1.5.7</serenity.version>
+         <serenity.cucumber.version>1.5.4</serenity.cucumber.version>
+         <!--  webdriver.driver>firefox</webdriver.driver> -->
+     </properties>  
+ 
+     <repositories> 
+       <repository> 
+         <snapshots> 
+         <enabled>false</enabled> 
+         </snapshots> 
+         <id>central</id> 
+         <name>bintray</name> 
+         <url>http://jcenter.bintray.com</url> 
+       </repository> 
+     </repositories> 
+     <pluginRepositories> 
+       <pluginRepository> 
+         <snapshots> 
+         <enabled>false</enabled> 
+         </snapshots> 
+         <id>central</id> 
+         <name>bintray-plugins</name> 
+         <url>http://jcenter.bintray.com</url> 
+       </pluginRepository> 
+     </pluginRepositories>  
+ 
+     <dependencies> 
+         <dependency> 
+             <groupId>net.serenity-bdd</groupId> 
+             <artifactId>serenity-core</artifactId> 
+             <version>${serenity.version}</version> 
+         </dependency> 
+ 
+ 
+         <dependency> 
+             <groupId>net.serenity-bdd</groupId> 
+             <artifactId>serenity-cucumber</artifactId> 
+             <version>${serenity.cucumber.version}</version> 
+             <scope>test</scope> 
+         </dependency> 
+          
+         <dependency> 
+             <groupId>org.slf4j</groupId> 
+             <artifactId>slf4j-simple</artifactId> 
+             <version>1.7.7</version> 
+         </dependency> 
+         <dependency> 
+             <groupId>junit</groupId> 
+             <artifactId>junit</artifactId> 
+             <version>4.12</version> 
+             <scope>test</scope> 
+         </dependency> 
+         <dependency> 
+             <groupId>org.assertj</groupId> 
+             <artifactId>assertj-core</artifactId> 
+             <version>1.7.0</version> 
+         </dependency> 
+         <dependency> 
+             <groupId>com.googlecode.lambdaj</groupId> 
+             <artifactId>lambdaj</artifactId> 
+             <version>2.3.3</version> 
+         </dependency> 
+     </dependencies> 
+     <build> 
+         <plugins> 
+             <plugin> 
+                 <groupId>org.apache.maven.plugins</groupId> 
+                 <artifactId>maven-surefire-plugin</artifactId> 
+                 <version>2.18.1</version> 
+                 <configuration> 
+                     <skip>true</skip> 
+                 </configuration> 
+             </plugin> 
+             <plugin> 
+                 <artifactId>maven-failsafe-plugin</artifactId> 
+                 <version>2.18.1</version> 
+                 <configuration> 
+                     <includes> 
+                         <include>**/FutureLoginRunnerTestSuite.java</include> 
+                     </includes> 
+                     <argLine>-Xmx512m</argLine> 
+                     <!--  systemPropertyVariables> 
+                         <webdriver.driver>${webdriver.driver}</webdriver.driver> 
+                     </systemPropertyVariables> -->
+                 </configuration> 
+                 <executions> 
+                     <execution> 
+                         <goals> 
+                             <goal>integration-test</goal> 
+                             <goal>verify</goal> 
+                         </goals> 
+                     </execution> 
+                 </executions> 
+             </plugin> 
+             <plugin> 
+                 <groupId>org.apache.maven.plugins</groupId> 
+                 <artifactId>maven-compiler-plugin</artifactId> 
+                 <version>3.2</version> 
+                 <configuration> 
+                     <source>1.7</source> 
+                     <target>1.7</target> 
+                 </configuration> 
+             </plugin> 
+             <plugin> 
+                 <groupId>net.serenity-bdd.maven.plugins</groupId> 
+                 <artifactId>serenity-maven-plugin</artifactId> 
+                 <version>${serenity.version}</version> 
+                 <executions> 
+                     <execution> 
+                         <id>serenity-reports</id> 
+                         <phase>post-integration-test</phase> 
+                         <goals> 
+                             <goal>aggregate</goal> 
+                         </goals> 
+                     </execution> 
+                 </executions> 
+             </plugin> 
+         </plugins> 
+     </build> 
+ </project> 
