Updated the serenity.conf and serenity.properties

--- a/src/test/resources/features/serenity.conf
+++ b/src/test/resources/features/serenity.conf
@@ -1,7 +1,7 @@
 webdriver {
   base.url = "http://todomvc.com/examples/angularjs/#/"
-  driver = firefox
-# driver = chrome
+#  driver = firefox
+ driver = chrome
 }
 
 # chrome.switches=--headless
