--- a/serenity.properties
+++ b/serenity.properties
@@ -1,12 +1,38 @@
 
 ##########################################
-##   configure the configuration file
+##  configure the configuration file
 ##  clean verify serenity:aggregate -Dmaven.test.failure.ignore=true
 ###########################################
 
-# Define the default driver
-#webdriver.driver=phantomjs
+####     IE Browser config         ####   
+###########################################
+#webdriver.driver=iexplorer
+#webdriver.ie.driver=C:\\Program Files\\IE_Web_Driver\\IEDriverServer.exe
+###########################################
 
+####     EDGE Browser config           ####      
+###########################################
+#webdriver.driver=edge
+#webdriver.edge.driver=C:\\Program Files\\MS_Edge_Web_Driver_bin\\MicrosoftWebDriver.exe
+###########################################
+
+
+####     CHROME Browser config         ####      
+###########################################
+# Define the browser type you want to use. If the "webdriver.driver" poperty is not set,
+# Then Serenity uses the default Firefox browser.
+# You must set a system path to the Gecko driver and the Firefox executable
+###############################
+#webdriver.driver=chrome
+###############################
+# Path to the Chrome driver executable, if it is NOT under C:\Program Files.
+###############################
+#webdriver.chrome.driver =C:\\Program Files\\Chrome_Web_Driver\\chromedriver.exe
+###############################
+# The Serenity execution won't be able to find the Chrome Web Driver even if you already set
+# the system path to the it.  It is a bug.  Need to let John know !!!
+# You MUST set the two system properties above in order to use the CHROME browser.
+#
 # Appears at the top of the reports
 serenity.project.name = Amazon Login Demo Project
 
@@ -35,7 +61,8 @@ serenity.browser.width = 1060
 
 # Update this portion to the Head Master in GitHUb
 # How long does Serenity wait for elements that are not present on the screen to load
-webdriver.timeouts.implicitlywait = 15000
+#webdriver.timeouts.implicitlywait = 30000
+webdriver.wait.for.timeout=20000
 ######################################################
 ## All the Serenity options
 
@@ -74,9 +101,6 @@ webdriver.timeouts.implicitlywait = 15000
 #
 #webdriver.wait.for.timeout
 #How long webdriver waits by default when you use a fluent waiting method, in milliseconds.
-#
-#webdriver.chrome.driver
-#Path to the Chrome driver, if it is not on the system path.
 #
 #serenity.home
 #The home directory for Serenity output and data files - by default, $USER_HOME/.serenity
