--- a/serenity.properties
+++ b/serenity.properties
@@ -16,23 +16,27 @@
 #webdriver.edge.driver=C:\\Program Files\\MS_Edge_Web_Driver_bin\\MicrosoftWebDriver.exe
 ###########################################
 
+### Firefox Browser  #######
+###########################################
+###############################
+webdriver.gecko.driver=/usr/local/bin/geckodriver
+#gecko.firefox.options={"binary": "/Applications/Firefox.app/Contents/MacOS/firefox-bin","log":{"level":"debug"}}
+###############################
 
 ####     CHROME Browser config         ####      
 ###########################################
-# Define the browser type you want to use. If the "webdriver.driver" poperty is not set,
-# Then Serenity uses the default Firefox browser.
-# You must set a system path to the Gecko driver and the Firefox executable
+
 ###############################
+# FOR MAC
+# Drop the chromedriver file in the project path.
 #webdriver.driver=chrome
 ###############################
-# Path to the Chrome driver executable, if it is NOT under C:\Program Files.
+
 ###############################
+# FOR WINDOW
 #webdriver.chrome.driver =C:\\Program Files\\Chrome_Web_Driver\\chromedriver.exe
 ###############################
-# The Serenity execution won't be able to find the Chrome Web Driver even if you already set
-# the system path to the it.  It is a bug.  Need to let John know !!!
-# You MUST set the two system properties above in order to use the CHROME browser.
-#
+
 # Appears at the top of the reports
 serenity.project.name = Amazon Login Demo Project
 
