Updated the narrative files

--- a/serenity.properties
+++ b/serenity.properties
@@ -48,7 +48,7 @@ serenity.test.root=src.test.java
 #serenity.test.root=net.thucydides.showcase.cucumber.junit
 
 # Customize your requirements hierarchy
-serenity.requirement.types = epic,feature, story
+serenity.requirement.types = epic,story,feature
 
 # To show version and RC(iteration)?
 serenity.release.types = Version,Iteration
