--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
      <artifactId>autoMap</artifactId> 
      <version>1.0-SNAPSHOT</version> 
      <packaging>jar</packaging> 
-     <!-- Update the Master Head with this new portion --> 
+     <!-- See the update Update the Master Head with this new portion  --> 
      <name>Amazon Login Automation</name> 
  
  
      <!-- Add this command to the configuration file --> 
      <!-- clean verify serenity:aggregate -Dmaven.test.failure.ignore=true --> 
-     <!-- serenity.version = 1.5.7 ...1.6.1 --> 
+     
      <!-- cucumber.version = 1.5.4 ...1.5.9 --> 
      <!-- serenity.browser.height = 1150 --> 
      <!-- serenity.browser.width = 1060 --> 
@@ -20,9 +20,11 @@
  
      <properties> 
          <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
-         <serenity.version>1.6.1</serenity.version>
-         <serenity.cucumber.version>1.5.8</serenity.cucumber.version>
-         <!--  webdriver.driver>firefox</webdriver.driver> -->
+         <!-- serenity.version = 1.6.1  to 1.7.0 --> 
+         <serenity.version>1.7.0</serenity.version>
+         
+         <!-- cucumber.version = 1.5.8 to 1.6.4  --> 
+         <serenity.cucumber.version>1.6.4</serenity.cucumber.version>
      </properties>  
  
      <repositories> 
@@ -73,9 +75,10 @@
              <scope>test</scope> 
          </dependency> 
          <dependency> 
+             <!-- assertj-core = 1.7.0 to 3.6.2  --> 
              <groupId>org.assertj</groupId> 
              <artifactId>assertj-core</artifactId> 
-             <version>1.7.0</version> 
+             <version>3.6.2</version> 
          </dependency> 
          <dependency> 
              <groupId>com.googlecode.lambdaj</groupId> 
@@ -88,12 +91,12 @@
              <plugin> 
                  <groupId>org.apache.maven.plugins</groupId> 
                  <artifactId>maven-surefire-plugin</artifactId> 
-                 <version>2.18.1</version> 
+                 <version>2.20.1</version> 
                  <configuration> 
                      <skip>true</skip> 
-                        <!--  includes>
-                           <include>**/*TestSuite.*</include>
-                        </includes -->
+                        <includes>
+                           <include>**/UserProfileManagementTestSuite.java</include>
+                        </includes>
                  </configuration> 
              </plugin> 
              <plugin> 
@@ -101,7 +104,7 @@
                  <version>2.18.1</version> 
                  <configuration> 
                      <includes> 
-                         <include>**/UserProfileManagementTestSuite.java</include> 
+                         <include>**/*TestSuite.*</include> 
                      </includes> 
                      <argLine>-Xmx512m</argLine> 
                      <!--  systemPropertyVariables> 
