--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
      <artifactId>autoMap</artifactId> 
      <version>1.0-SNAPSHOT</version> 
      <packaging>jar</packaging> 
-     <!-- See the update Update the Master Head with this new portion  --> 
+     <!-- See the update now Update the Master Head with this new portion  --> 
      <name>Amazon Login Automation</name> 
  
  
