--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
           xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"> 
      <modelVersion>4.0.0</modelVersion> 
      <groupId>com.autoMap</groupId> 
-     <artifactId>autoMap</artifactId> 
+     <artifactId>autoMap</artifactId>  
      <version>1.0-SNAPSHOT</version> 
      <packaging>jar</packaging> 
      <!-- Update the Master Head with this new portion --> 
@@ -53,7 +53,6 @@
              <version>${serenity.version}</version> 
          </dependency> 
  
- 
          <dependency> 
              <groupId>net.serenity-bdd</groupId> 
              <artifactId>serenity-cucumber</artifactId> 
@@ -82,6 +81,13 @@
              <artifactId>lambdaj</artifactId> 
              <version>2.3.3</version> 
          </dependency> 
+         
+         <!--dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-screenplay-webdriver</artifactId>
+            <version>1.7.4</version>
+          </dependency-->
+          
      </dependencies> 
      <build> 
          <plugins> 
@@ -91,6 +97,9 @@
                  <version>2.18.1</version> 
                  <configuration> 
                      <skip>true</skip> 
+                      <!--  includes>
+                           <include>**/*TestSuite.*</include>
+                       </includes -->
                  </configuration> 
              </plugin> 
              <plugin> 
@@ -98,7 +107,7 @@
                  <version>2.18.1</version> 
                  <configuration> 
                      <includes> 
-                         <include>**/FutureLoginRunnerTestSuite.java</include> 
+                         <include>**/UserProfileManagementTestSuite.java</include> 
                      </includes> 
                      <argLine>-Xmx512m</argLine> 
                      <!--  systemPropertyVariables> 
