--- a/pom.xml
+++ b/pom.xml
@@ -6,23 +6,23 @@
      <artifactId>autoMap</artifactId>  
      <version>1.0-SNAPSHOT</version> 
      <packaging>jar</packaging> 
-     <!-- Update the project name Try 1 --> 
+
      <name>Automation Practice Project</name> 
  
  
      <!-- Add this command to the configuration file --> 
      <!-- clean verify serenity:aggregate -Dmaven.test.failure.ignore=true --> 
-     <!-- serenity.version = 1.5.7 ...1.6.1 --> 
-     <!-- cucumber.version = 1.5.4 ...1.5.9 --> 
      <!-- serenity.browser.height = 1150 --> 
      <!-- serenity.browser.width = 1060 --> 
- 
- 
+
      <properties> 
-         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
-         <serenity.version>1.6.1</serenity.version>
-         <serenity.cucumber.version>1.5.8</serenity.cucumber.version>
-         <!--  webdriver.driver>firefox</webdriver.driver> -->
+         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+         
+         <!-- serenity.version = 1.6.1 -=> 1.7.0 --> 
+         <serenity.version>1.7.0</serenity.version>
+         
+         <!-- cucumber.version = 1.5.8 => 1.6.4 --> 
+         <serenity.cucumber.version>1.6.4</serenity.cucumber.version>
      </properties>  
  
      <repositories> 
@@ -72,21 +72,16 @@
              <scope>test</scope> 
          </dependency> 
          <dependency> 
+              <!--  assertj-core 1.7.0 => 3.6.2 -->
              <groupId>org.assertj</groupId> 
              <artifactId>assertj-core</artifactId> 
-             <version>1.7.0</version> 
+             <version>3.6.2</version> 
          </dependency> 
          <dependency> 
              <groupId>com.googlecode.lambdaj</groupId> 
              <artifactId>lambdaj</artifactId> 
              <version>2.3.3</version> 
          </dependency> 
-         
-         <!--dependency>
-            <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-screenplay-webdriver</artifactId>
-            <version>1.7.4</version>
-          </dependency-->
           
      </dependencies> 
      <build> 
@@ -128,8 +123,8 @@
                  <artifactId>maven-compiler-plugin</artifactId> 
                  <version>3.2</version> 
                  <configuration> 
-                     <source>1.7</source> 
-                     <target>1.7</target> 
+                     <source>1.8</source> 
+                     <target>1.8</target> 
                  </configuration> 
              </plugin> 
              <plugin> 
