--- a/serenity.properties
+++ b/serenity.properties
@@ -1,4 +1,24 @@
+erenity.test.root = net.serenitybdd.demos.todos.screenplay.features
+#serenity.linked.tags = issue
+#webdriver.base.url=http://localhost:8080/examples
+#simplified.stack.traces=false
+#serenity.use.unique.browser=true
+#my.property=foo
+#thucydides.activate.highlighting=true
+#browserstack.browserName=chrome
 
+#serenity.take.screenshots=FOR_FAILURES
+#webdriver.wait.for.timeout=20000
+#serenity.browser.width=400
+#serenity.browser.height=400
+
+#enable.markdown=story,narrative,scenario,step
+serenity.browser.maximized = true
+#serenity.issue.tracker.url = http://my.issue.tracker/MY-PROJECT/browse/{0}
+
+#gecko.firefox.options={"binary": "/Applications/Firefox-49.1.app/Contents/MacOS/firefox-bin","log":{"level":"debug"}}
+
+##############################################################################################
 ##########################################
 ##  configure the configuration file
 ##  clean verify serenity:aggregate -Dmaven.test.failure.ignore=true
@@ -19,7 +39,7 @@
 ### Firefox Browser  #######
 ###########################################
 ###############################
-webdriver.gecko.driver=/usr/local/bin/geckodriver
+#webdriver.gecko.driver=/usr/local/bin/geckodriver
 #gecko.firefox.options={"binary": "/Applications/Firefox.app/Contents/MacOS/firefox-bin","log":{"level":"debug"}}
 ###############################
 
@@ -29,7 +49,7 @@ webdriver.gecko.driver=/usr/local/bin/geckodriver
 ###############################
 # FOR MAC
 # Drop the chromedriver file in the project path.
-#webdriver.driver=chrome
+webdriver.driver=chrome
 ###############################
 
 ###############################
@@ -38,7 +58,7 @@ webdriver.gecko.driver=/usr/local/bin/geckodriver
 ###############################
 
 # Appears at the top of the reports
-serenity.project.name = Amazon Login Demo Project
+serenity.project.name = Automation Practice Demo Project
 
 # Root package for any JUnit acceptance tests
 # Below is the default root of junit
