Update to user firefox driver

--- a/serenity.properties
+++ b/serenity.properties
@@ -39,7 +39,7 @@ serenity.browser.maximized = true
 ### Firefox Browser  #######
 ###########################################
 ###############################
-#webdriver.gecko.driver=/usr/local/bin/geckodriver
+webdriver.gecko.driver=/usr/local/bin/geckodriver
 #gecko.firefox.options={"binary": "/Applications/Firefox.app/Contents/MacOS/firefox-bin","log":{"level":"debug"}}
 ###############################
 
@@ -49,7 +49,7 @@ serenity.browser.maximized = true
 ###############################
 # FOR MAC
 # Drop the chromedriver file in the project path.
-webdriver.driver=chrome
+#webdriver.driver=chrome
 ###############################
 
 ###############################
