--- a/pom.xml
+++ b/pom.xml
@@ -6,22 +6,22 @@
      <artifactId>autoMap</artifactId>  
      <version>1.0-SNAPSHOT</version> 
      <packaging>jar</packaging> 
-
      <name>Automation Practice Project</name> 
- 
      <!-- Add this command to the configuration file --> 
      <!-- clean verify serenity:aggregate -Dmaven.test.failure.ignore=true --> 
      <!-- serenity.browser.height = 1150 --> 
      <!-- serenity.browser.width = 1060 --> 
 
      <properties> 
-         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
+         <!-- serenity.version = 1.6.1  to 1.7.0 --> 
+         <serenity.version>1.8.3</serenity.version>
          
          <!-- serenity.version = 1.6.1 -=> 1.7.0 --> 
-         <serenity.version>1.7.0</serenity.version>
+         <serenity.version>1.8.3</serenity.version>
          
          <!-- cucumber.version = 1.5.8 => 1.6.4 --> 
-         <serenity.cucumber.version>1.6.4</serenity.cucumber.version>
+         <serenity.cucumber.version>1.6.6</serenity.cucumber.version>
      </properties>  
  
      <repositories> 
@@ -81,6 +81,12 @@
              <artifactId>lambdaj</artifactId> 
              <version>2.3.3</version> 
          </dependency> 
+         
+         <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
           
      </dependencies> 
      <build> 
@@ -91,9 +97,9 @@
                  <version>2.18.1</version> 
                  <configuration> 
                      <skip>true</skip> 
-                      <!--  includes>
-                           <include>**/*TestSuite.*</include>
-                       </includes -->
+                        <includes>
+                           <include>**/UserProfileManagementTestSuite.java</include>
+                        </includes>
                  </configuration> 
              </plugin> 
              <plugin> 
@@ -102,9 +108,11 @@
                  <configuration> 
                      <includes> 
                          <include>**/UserProfileManagementTestSuite.java</include> 
-                         <!-- include>**/ChangeAddressTestSuite.java</include  --> 
                      </includes> 
                      <argLine>-Xmx512m</argLine> 
+                     <!--  systemPropertyVariables> 
+                         <webdriver.driver>${webdriver.driver}</webdriver.driver> 
+                     </systemPropertyVariables> -->
                  </configuration> 
                  <executions> 
                      <execution> 
@@ -141,3 +149,4 @@
          </plugins> 
      </build> 
  </project> 
+
