updated serenity.properties project

--- a/serenity.properties
+++ b/serenity.properties
@@ -34,7 +34,7 @@
 # You MUST set the two system properties above in order to use the CHROME browser.
 #
 # Appears at the top of the reports
-serenity.project.name = Amazon Login Demo Project
+serenity.project.name = Automation Practice Project
 
 # Root package for any JUnit acceptance tests
 # Below is the default root of junit
