--- a/serenity.properties
+++ b/serenity.properties
@@ -4,34 +4,34 @@
 ##  clean verify serenity:aggregate -Dmaven.test.failure.ignore=true
 ###########################################
 
+####    Firefox Browser config         ####   
+###########################################
+#BY DEFAULT, THIS PROJECT AUTMATICALLY RUNS ON FIFREFOX BROWSER VIA GECKO WEB DRIVER SERVER
+###########################################
+
 ####     IE Browser config         ####   
 ###########################################
+# Turn this option on if you want to test in Internet Explorer Browser
 #webdriver.driver=iexplorer
-#webdriver.ie.driver=C:\\Program Files\\IE_Web_Driver\\IEDriverServer.exe
+# NOTE: webdriver.ie.driver=C:\\Program Files\\IE_Web_Driver\\IEDriverServer.exe
 ###########################################
 
 ####     EDGE Browser config           ####      
 ###########################################
+# Turn this option on if you want to test in Edge Browser
 #webdriver.driver=edge
-#webdriver.edge.driver=C:\\Program Files\\MS_Edge_Web_Driver_bin\\MicrosoftWebDriver.exe
+# NOTE: webdriver.edge.driver=C:\\Program Files\\MS_Edge_Web_Driver_bin\\MicrosoftWebDriver.exe
 ###########################################
 
 
 ####     CHROME Browser config         ####      
 ###########################################
-# Define the browser type you want to use. If the "webdriver.driver" poperty is not set,
-# Then Serenity uses the default Firefox browser.
-# You must set a system path to the Gecko driver and the Firefox executable
-###############################
+# Turn this option on if you want to test in Chrome Browser
 #webdriver.driver=chrome
 ###############################
-# Path to the Chrome driver executable, if it is NOT under C:\Program Files.
-###############################
+# NOTE: Path to the Chrome driver executable, if it is NOT under C:\Program Files.
 #webdriver.chrome.driver =C:\\Program Files\\Chrome_Web_Driver\\chromedriver.exe
 ###############################
-# The Serenity execution won't be able to find the Chrome Web Driver even if you already set
-# the system path to the it.  It is a bug.  Need to let John know !!!
-# You MUST set the two system properties above in order to use the CHROME browser.
 #
 # Appears at the top of the reports
 serenity.project.name = Automation Practice Project
