--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,13 @@
      <properties> 
          <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
          <!-- serenity.version = 1.6.1  to 1.7.0 --> 
-         <serenity.version>1.6.1</serenity.version>
+         <serenity.version>1.8.3</serenity.version>
          
          <!-- serenity.version = 1.6.1 -=> 1.7.0 --> 
-         <serenity.version>1.6.1</serenity.version>
+         <serenity.version>1.8.3</serenity.version>
          
          <!-- cucumber.version = 1.5.8 => 1.6.4 --> 
-         <serenity.cucumber.version>1.5.8</serenity.cucumber.version>
+         <serenity.cucumber.version>1.6.6</serenity.cucumber.version>
      </properties>  
  
      <repositories> 
@@ -81,6 +81,11 @@
              <artifactId>lambdaj</artifactId> 
              <version>2.3.3</version> 
          </dependency> 
+         <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
           
      </dependencies> 
      <build> 
