--- a/serenity.properties
+++ b/serenity.properties
@@ -1,3 +1,7 @@
+#  How to execute a test case via CLI 
+#  mvn verify -Dcucumber.options="--tag @Address-Change"
+
+
 erenity.test.root = net.serenitybdd.demos.todos.screenplay.features
 #serenity.linked.tags = issue
 #webdriver.base.url=http://localhost:8080/examples
