Updated the Serenity.properties

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,8 @@
-#  How to execute a test case via CLI 
-#  mvn verify -Dcucumber.options="--tag @Address-Change"
+#  How to execute a test case via CLI ?
+#  mvn verify -Dcucumber.options="--tag <@Address-Change>"
+
+# How to run a test suite via CLI?
+# mvn verify test -Dtest=<UserProfileManagementTestSuite>
 
 
 erenity.test.root = net.serenitybdd.demos.todos.screenplay.features
