--- a/serenity.properties
+++ b/serenity.properties
@@ -2,7 +2,7 @@
 #  mvn verify -Dcucumber.options="--tag <@Address-Change>"
 
 # How to run a test suite via CLI?
-# mvn verify test -Dtest=<UserProfileManagementTestSuite>
+# mvn verify <test> -Dtest=<UserProfileManagementTestSuite>
 
 
 erenity.test.root = net.serenitybdd.demos.todos.screenplay.features
