--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,11 @@
      <!-- serenity.browser.width = 1060 --> 
 
      <properties> 
-         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
-         <!-- serenity.version = 1.6.1  to 1.7.0 --> 
-         <serenity.version>1.8.3</serenity.version>
-         
-         <!-- serenity.version = 1.6.1 -=> 1.7.0 --> 
-         <serenity.version>1.8.3</serenity.version>
-         
-         <!-- cucumber.version = 1.5.8 => 1.6.4 --> 
-         <serenity.cucumber.version>1.6.6</serenity.cucumber.version>
+               <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
+         <!-- serenity.version = 1.8.3  to 2.0.30< --> 
+         <serenity.version>2.0.30</serenity.version>   
+         <!-- cucumber.version = 1.6.6 => 1.9.21 --> 
+         <serenity.cucumber.version>1.9.21</serenity.cucumber.version>
      </properties>  
  
      <repositories> 
@@ -109,9 +105,9 @@
                          <include>**/UserProfileManagementTestSuite.java</include> 
                      </includes> 
                      <argLine>-Xmx512m</argLine> 
-                     <!--  systemPropertyVariables> 
+                     <!-- systemPropertyVariables> 
                          <webdriver.driver>${webdriver.driver}</webdriver.driver> 
-                     </systemPropertyVariables> -->
+                     </systemPropertyVariables-->
                  </configuration> 
                  <executions> 
                      <execution> 
@@ -127,8 +123,8 @@
                  <artifactId>maven-compiler-plugin</artifactId> 
                  <version>3.2</version> 
                  <configuration> 
-                     <source>1.7</source> 
-                     <target>1.7</target> 
+                     <source>1.8</source> 
+                     <target>1.8</target> 
                  </configuration> 
              </plugin> 
              <plugin> 
